# gmxtopology

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml
docs/: publishing.md
examples/: example.ipynb  example.top  topol-processed.top
gmxtop/: __init__.py  interaction_specs.py  io.py  parser.py  topology.py
gmxtop/parse/: helpers.py  parsers.py
gmxtopology/: .gitignore  __init__.py  interaction_specs.py  io.py  lookup.py  parser.py  schema.py  topology.py
tests/: test_topology_parsing.py
tests/fixtures/gromacs-v2026.2/: SOURCE.md  grompp.mdp  spce.gro  tip3p.gro  tip4p.gro  topol-spce.top  topol-tip3p.top  topol-tip4p.top  topol-urea.top  urea.gro
tests/fixtures/parmed-96ec61a/: SOURCE.md
tests/fixtures/prosECCo75-e4831a4/: SOURCE.md  UPSTREAM-README.md  cmap.gro  topol-cmap.top  topol-popc.top  topol-test.top
